fixed footer covering content, removed some fluff

--- a/src/index.css
+++ b/src/index.css
@@ -172,7 +172,7 @@ h1 {
   padding: 5px;
   margin-top: 10px;
   position: absolute;
-  bottom: 0;
+  bottom: auto;
   width: 100%;
 }
 
